add edited index file

--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -15,6 +15,10 @@
         <P>Html stands for hypertext markup language,it is used to develop websites and web applications.</P>
         <h3>concepts of html</h3>
         <p>Html is a very broad programming language,it is also used with CSS.</p>
-        <P> <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png"alx="ALX">
+        
+	<P> <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png"alx="ALX">
+	<a href="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" target="_blank">visit ALX<
+	</a>
+	</p>
 </body>
 </html>
