add an updated tweets html file

--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -5,13 +5,31 @@
     <title>My Tweets</title>
 </head>
 <body>
-    <h1>Latest Tweets</h1>
-    <blockquote class="twitter-tweet">
-        <p>Here’s an embedded tweet example.</p>
-        <a href="https://twitter.com/TwitterUser/status/123456789">Tweet Link</a>
-    </blockquote>
+    <header>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="tweets.html">Tweets</a></li>
+        </ul>
+    </header>
 
-    <a href="index.html">Back to Homepage</a>
+    <main>
+        <article>
+            <h1>Latest Tweets</h1>
+            <blockquote class="twitter-tweet">
+                <p>Excited to share my progress in web development! Learning HTML, CSS, and JavaScript 🚀 #CodingJourney</p>
+                <a href="https://twitter.com/TwitterUser/status/123456789">View Tweet</a>
+            </blockquote>
+        </article>
+
+        <aside>
+            <p>Placeholder to add comment thread later</p>
+        </aside>
+    </main>
+
+    <footer>
+        <p>Made by Prichard - <a href="https://example.com" target="_blank">here</a></p>
+    </footer>
 </body>
 </html>
+
 
