--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -1,24 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-            <meta charset="utf-80">
-            <title>my first HTML page</title>
-            <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <meta charset="UTF-8">
+    <title>My Webpage</title>
 </head>
-
 <body>
-        <h1>welcome to my website</h1>
-        <p>This is a simple html webpage development.we will explore the basics of html.
-        </p>
-        <h2>HTML</h2>
-        <P>Html stands for hypertext markup language,it is used to develop websites and web applications.</P>
-        <h3>concepts of html</h3>
-        <p>Html is a very broad programming language,it is also used with CSS.</p>
-        
-	<P> <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png"alx="ALX">
-	<a href="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" target="_blank">visit ALX<
-	</a>
-	</p>
+    <header>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="tweets.html">Tweets</a></li>
+        </ul>
+    </header>
+
+    <main>
+        <article>
+            <h1>Main Title</h1>
+            <h2>Subheading</h2>
+            <h3>Another Subheading</h3>
+
+            <p>Paragraph 1: Introduction</p>
+            <p>Paragraph 2: Explanation</p>
+            <p>Paragraph 3: Details</p>
+            <p>Paragraph 4: Conclusion</p>
+
+            <a href="https://example.com">
+                <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="Clickable Image">
+            </a>
+        </article>
+
+        <aside>
+            <p>placeholder to add comment thread later</p>
+        </aside>
+    </main>
+
+    <footer>
+        <p>Made by <YOUR NAME> - <a href="<ANY LINK>" target="_blank">here</a></p>
+    </footer>
 </body>
 </html>
+
