--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -2,39 +2,56 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>My Webpage</title>
+    <title>Prichard_webpage</title>
 </head>
 <body>
     <header>
         <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="tweets.html">Tweets</a></li>
+            <li><a href="https://index.html">Home</a></li>
+            <li><a href="https://x.com/Genaro_pd/status/1920921558165475583">Tweets</a></li>
         </ul>
     </header>
 
     <main>
         <article>
-            <h1>Main Title</h1>
-            <h2>Subheading</h2>
-            <h3>Another Subheading</h3>
+            <h1>Welcome to My Webpage</h1>
+            <h2>Discover More About Me</h2>
+            <h3>A Bit About My Interests</h3>
 
-            <p>Paragraph 1: Introduction</p>
-            <p>Paragraph 2: Explanation</p>
-            <p>Paragraph 3: Details</p>
-            <p>Paragraph 4: Conclusion</p>
+            <p>Hello! My name is Prichard, and I am passionate about web development.</p>
+            <p>I am currently learning HTML, CSS, and JavaScript to build structured webpages.</p>
+            <p>This is my personal space to share my thoughts, projects, and experiences.</p>
+            <p>Stay tuned for more content as I continue my journey!</p>
 
-            <a href="https://example.com">
-                <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="Clickable Image">
+            <a href="https://x.com/Genaro_pd">
+                <img src="https://pbs.twimg.com/profile_images/1692694155628007424/Ejl1Uxh3_400x400.jpg" alt="Clickable Image">
             </a>
+
+            <!-- Learner Table -->
+            <table>
+                <thead>
+                    <tr>
+                        <th>Name</th>
+                        <th>Age</th>
+                        <th>Country</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr><td>John</td><td>25</td><td>USA</td></tr>
+                    <tr><td>Emily</td><td>28</td><td>Canada</td></tr>
+                    <tr><td>Michael</td><td>32</td><td>Australia</td></tr>
+                    <tr><td>Sophia</td><td>21</td><td>UK</td></tr>
+                </tbody>
+            </table>
         </article>
 
         <aside>
-            <p>placeholder to add comment thread later</p>
+            <p>Placeholder to add comment thread later</p>
         </aside>
     </main>
 
     <footer>
-        <p>Made by <YOUR NAME> - <a href="<ANY LINK>" target="_blank">here</a></p>
+        <p>Made by Prichard - <a href="https://x.com/Genaro_pd" target="_blank">here</a></p>
     </footer>
 </body>
 </html>
